# morphasynth

./: .gitignore  .gitmodules  README.markdown  README.md  morphasynth.pro
code/: Makefile
code/MetaMorphASynth/: config.make
code/MetaMorphASynth/src/: AudioIO.cpp  AudioIO.h  Command.h  Constants.h  Controller.cpp  Controller.h  DSPHiPass.cpp  DSPHiPass.h  DSPLoPass.cpp  DSPLoPass.h  DSPNoiseWithLevel.cpp  DSPNoiseWithLevel.h  DSPOscillator.cpp  DSPOscillator.h  DSPSynthesizer.cpp  DSPSynthesizer.h  Event.h  FaustDefinitions.h  GUI.cpp  GUI.h  GuiEvent.h  HiPass.cpp  HiPass.h  LoPass.cpp  LoPass.h  MetaMorphASynthApp.cpp  MetaMorphASynthApp.h  MidiEvent.h  MidiIO.cpp  MidiIO.h  MidiMap.cpp  MidiMap.h  MidiUtilities.cpp  MidiUtilities.h  MorphasynthApp.h  NoiseWithLevel.cpp  NoiseWithLevel.h  Oscillator.cpp  Oscillator.h  Parameter.h  (+5 more)
code/Morphasynth/: config.make
code/Morphasynth/src/: AudioIO.cpp  AudioIO.h  Command.h  Constants.h  Controller.cpp  Controller.cpp~  Controller.h  DSPHiPass.cpp  DSPLoPass.cpp  DSPNoiseWithLevel.cpp  DSPOscillator.cpp  DSPSynthesizer.cpp  DSPSynthesizer.h  DSPSynthesizerVoice.cpp  DSPSynthesizerVoice.h  GUI.cpp  GUI.h  GUIEvent.h  GUIEvent.h~  GUIMorph.cpp  GUIMorph.h  GUIPresets.cpp  GUIPresets.h  GUITimbre (copy) sin dañar.cpp~  GUITimbre.cpp  GUITimbre.cpp~  GUITimbre.h  GUITimbre.h~  LoPass.h  MidiEvent.h  MidiIO.cpp  MidiIO.h  MidiMap.cpp  MidiMap.h  MidiUtilities.cpp  MidiUtilities.h  MorphasynthApp.cpp  Oscillator.cpp  Parameter.def  Parameter.h  (+9 more)
faust/: HPF.dsp  LPF.dsp  Makefile  filter.dsp
html/: index.html
html/css/: style.css
html/js/: Button.js  Keyboard.js  Timbre-space.js  TimbreSpace.js  clasic-synth.js  config-panel.js  libpd.js  morphasynth.js
html/vendors/: cordova.js
libs/directory/: Makefile  README.txt  directory-help.pd  directory.c
libs/maxlib/: .gitignore  Makefile
libs/moog_lopass/: Makefile  moog_lopass.dsp
libs/resonant_hipass/: Makefile  resonant_hipass.dsp
libs/zexy/src/: 0x260x260x7e.d  0x2e.d  0x3c0x7e.d  0x3d0x3d0x7e.d  0x3e0x7e.d  0x7c0x7c0x7e.d  Make.config  Makefile  a2l.d  absgn~.d  abs~.d  atoi.d  avg~.d  blockmirror~.d  blockshuffle~.d  blockswap~.d  config.status  configure  date.d  demultiplex.d  demultiplex~.d  dfreq~.d  dirac~.d  drip.d  envrms~.d  fifop.d  freadln.d  fwriteln.d  glue.d  index.d  length.d  lifop.d  limiter~.d  list2int.d  list2lists.d  list2symbol.d  lister.d  listfind.d  liststorage.d  lpt.d  (+47 more)
patches/: osc_continuo.pd
pd/patches/: 00_Morphasynth_GUI.pd  00_Morphasynth_NO_GUI.pd  1.GUI.pd  2.DSP.pd  4.UtilityGenerateMFCC.pd  5.iOS.pd  5.ios.pd
pd/patches/pd/: 2d_interface.pd  adsr.pd  (+20 more)
res/: resources.qrc
res/html/: index.html
res/pd/: 1.GUI.pd  2.DSP.pd  3.UtilityWavExporter.pd  4.UtilityGenerateMFCC.pd  adsr.pd  keyboard.pd  main_patch.pd  oscillator-lfo.pd  oscillator.pd  parameter-order.txt  presets.pd  sandbx.pd  scope.pd  synthesizer.pd  voice.pd  wav-exporter.pd  zlider.pd
scripts/: development.bat  development.sh
src/: Audio.cpp  Audio.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
vendors/libpd/: Makefile
vendors/pd-extended-0.43.4/pd/asio/: Makefile.am
vendors/pd-extended-0.43.4/pd/po/: Makefile.am  af.po  az.po  be.po  ca.po  cs.po  da.po  de.po  el.po  en_ca.po  en_gb.po  es.po  es_mx.po  eu.po  fr.po  gd.po  gu.po  he.po  hi.po  hu.po  it.po  ja.po  ko.po  lt.po  lv.po  nl.po  pa.po  pd_dynamic_strings.tcl  pt.po  pt_pt.po  ru.po  sk.po  sq.po  sv.po  template.pot  tr.po  vi.po  zh_cn.po  zh_tw.po
vendors/timbreID-0.6.0/: INSTALL.txt
wrappers/linux/: Makefile  morphasynth.pro
(+322 files in other folders)
